# GridSFM

./: .gitignore  README.md
.github/: dependabot.yml
model/: .gitignore  CHANGELOG.md  README.md  dashboard.py  mitigation_report.json  pyproject.toml  requirements.txt  test.py  test_2.py  test_3.py  test_4.py  test_5.py
model/examples/: finetune_opfdata_case6470.ipynb  infer_samples.py  opfdata.py  predict_to_viewer.py
model/gridsfm/: __init__.py  blocks.py  checkpoint.py  cycle_basis.py  data.py  dc_prior.py  eval.py  finetune_opfdata.py  hodge_pe.py  loss.py  model.py  opfdata_train.py  pe_features.py  schema.py  signed_incidence.py  stress_features.py  synthetic.py
model/gridsfm/hf_util/: __init__.py  gridsfm_pg_loader.py
model/samples/: README.md  case1354_pegase.pyg.json  case1803_snem.pyg.json  case1888_rte.pyg.json  case1951_rte.pyg.json  case2312_goc.pyg.json  case2383wp_k.pyg.json  case500_goc.pyg.json  case588_sdet.pyg.json  case793_goc.pyg.json  msr_arizona.pyg.json  msr_arkansas.pyg.json  msr_california.pyg.json  msr_colorado.pyg.json  msr_desert_sw.pyg.json  msr_georgia.pyg.json  msr_illinois.pyg.json  msr_indiana.pyg.json  msr_iowa.pyg.json  msr_kansas.pyg.json  msr_kentucky.pyg.json  msr_louisiana.pyg.json  msr_michigan.pyg.json  msr_minnesota.pyg.json  msr_mississippi.pyg.json  msr_missouri.pyg.json  msr_new_england.pyg.json  msr_new_york.pyg.json  msr_north_carolina.pyg.json  msr_ohio.pyg.json  msr_oklahoma.pyg.json  msr_pacific_nw.pyg.json  msr_pennsylvania.pyg.json  msr_south_carolina.pyg.json  msr_tennessee.pyg.json  msr_virginia.pyg.json  msr_washington.pyg.json  msr_wisconsin.pyg.json
model/tests/: test_cache_invalidation.py  test_ft.py  test_opfdata.py  test_pi_model.py  test_smoke.py  test_stress.py
power_grid/US/topology_solver_pipeline/: INSTALL_AND_QUICKSTART.md  Makefile  Manifest.toml  PIPELINE_DETAILS.md  Project.toml  README.md  export_gridsfm_data.jl  gen_perturbed_data.jl  integration_test_all_components.sh  run_gen_gridsfm_data.sh  run_opf_relaxation.jl  solve_pyg_json.jl  solve_topo_json.jl
power_grid/US/topology_solver_pipeline/docker/: Dockerfile  patch_model.jl  run_pipeline.sh
power_grid/US/topology_solver_pipeline/shared/: relaxation_levels.json
power_grid/US/viewer/: README.md  index.html  serve.py
power_grid/hf_util/: README.md  __init__.py  gridsfm_pg_loader.py  pyproject.toml
