[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gridsfm-hf-util"
version = "1.0.0"
description = "HuggingFace loader for the GridSFM US Power Grid dataset"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub",
]

[project.urls]
Repository = "https://github.com/microsoft/GridSFM"

[tool.setuptools.packages]
find = {namespaces = true, where = ["src"]}
